--- a/index.html
+++ b/index.html
@@ -77,6 +77,6 @@
             </a>
         </div>
     </footer>    
-    <script src="/Slider.js"></script>  
+    <script src="./Slider.js"></script>  
 </body>
 </html>
